<resources>
    <string name="app_name">Foosball King</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="pick_user">Pick user</string>
    <string name="history">History</string>
    <string name="rating">Rating</string>
    <string name="six">6</string>
    <string name="ten">10</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="zero">0</string>
    <string name="by_games_played">Games Played</string>
    <string name="by_victories">Victories</string>
    <string name="ranking">Ranking</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up here</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="enter_your_email">Enter your email</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>