<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="com.vladds.foosballking.widgets.GameScorePicker">

    <Button
        android:id="@+id/button0"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/zero" />

    <Button
        android:id="@+id/button1"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/one" />

    <Button
        android:id="@+id/button2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/two" />

    <Button
        android:id="@+id/button3"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/three" />

    <Button
        android:id="@+id/button4"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/four" />

    <Button
        android:id="@+id/button5"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/five" />

    <Button
        android:id="@+id/button6"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/six" />

    <Button
        android:id="@+id/button7"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/seven" />

</merge>